--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@
     <title>Namesake</title>
   </head>
   <body>
-    <h1>Namesake</h1>
+    <main>
+      <h1>Namesake</h1>
+    </main>
   </body>
 </html>
