--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,30 +12,14 @@ body {
   flex-direction: column;
   align-items: flex-start;
   font-size: var(--step-0);
-  font-family: var(--font-sans);
-  font-weight: var(--font-weight-normal);
   line-height: var(--line-height-body);
   text-rendering: optimizelegibility;
   font-synthesis: none;
 }
 
-body.dark {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 ::selection {
-  background: var(--pink-4);
-  color: var(--pink-12);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: var(--font-weight-bold);
+  background: var(--gray-12);
+  color: var(--pink-7);
 }
 
 h1 {
@@ -68,10 +52,6 @@ h5 {
 small {
   font-size: var(--step--1);
   line-height: var(--line-height-body);
-}
-
-strong {
-  font-weight: var(--font-weight-bold);
 }
 
 a {
