--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,16 +1,17 @@
 @import "@radix-ui/colors/gray.css";
+@import "@radix-ui/colors/gray-alpha.css";
 @import "@radix-ui/colors/pink.css";
 
 :root {
-  /* @link https://utopia.fyi/type/calculator?c=320,16,1.125,720,21,1.25,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-  --step--1: clamp(0.8889rem, 0.88rem + 0.0444vi, 0.9rem);
-  --step-0: clamp(1rem, 0.9rem + 0.5vi, 1.125rem);
-  --step-1: clamp(1.125rem, 0.9rem + 1.125vi, 1.4063rem);
-  --step-2: clamp(1.2656rem, 0.8719rem + 1.9688vi, 1.7578rem);
-  --step-3: clamp(1.4238rem, 0.8051rem + 3.0938vi, 2.1973rem);
-  --step-4: clamp(1.6018rem, 0.686rem + 4.5791vi, 2.7466rem);
-  --step-5: clamp(1.802rem, 0.4971rem + 6.5248vi, 3.4332rem);
-  --step-6: clamp(2.0273rem, 0.2159rem + 9.057vi, 4.2915rem);
+  /* @link https://utopia.fyi/type/calculator?c=320,16,1.125,1240,20,1.333,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --step--1: clamp(0.9375rem, 0.8462rem + 0.4565vi, 1.2rem);
+  --step-0: clamp(1.125rem, 0.9946rem + 0.6522vi, 1.5rem);
+  --step-1: clamp(1.35rem, 1.1674rem + 0.913vi, 1.875rem);
+  --step-2: clamp(1.62rem, 1.3683rem + 1.2587vi, 2.3438rem);
+  --step-3: clamp(1.944rem, 1.6012rem + 1.7142vi, 2.9297rem);
+  --step-4: clamp(2.3328rem, 1.8704rem + 2.3118vi, 3.6621rem);
+  --step-5: clamp(2.7994rem, 2.1808rem + 3.0927vi, 4.5776rem);
+  --step-6: clamp(3.3592rem, 2.5374rem + 4.1092vi, 5.722rem);
 
   /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
@@ -25,12 +26,13 @@
   /* Line heights */
   --line-height-single: 1;
   --line-height-display: 1.1;
-  --line-height-tight: 1.3;
-  --line-height-snug: 1.4;
-  --line-height-body: 1.5;
+  --line-height-body: 1.3;
 
   /* Letter spacing */
   --letter-spacing-condensed: -0.005em;
   --letter-spacing-normal: 0;
   --letter-spacing-loose: 0.01em;
+
+  /* Radii */
+  --radius-sm: 2px;
 }
