--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import {
   RiInstagramLine,
   RiLinkedinLine,
 } from "react-icons/ri";
-import idImage from "./id.png";
+import idImage from "../images/id.png";
 
 const year = new Date().getFullYear();
 ---
