Fix accessibility issues

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const year = new Date().getFullYear();
   description="Namesake streamlines the legal name and gender marker change process for trans, nonbinary, and gender expansive folks."
 >
   <main>
-    <a href="/"><Logo /></a>
+    <a href="/" aria-label="Namesake homepage"><Logo /></a>
     <div class="hero">
       <div class="contents">
         <h1>Be seen for who you are.</h1>
@@ -47,10 +47,12 @@ const year = new Date().getFullYear();
     <div class="social">
       <a
         href="https://www.instagram.com/joinnamesake/"
+        aria-label="View Namesake on Instagram"
         title="View Namesake on Instagram"><RiInstagramLine size="24px" /></a
       >
       <a
         href="https://www.linkedin.com/company/namesake-collaborative/"
+        aria-label="View Namesake on LinkedIn"
         title="View Namesake on LinkedIn"><RiLinkedinLine size="24px" /></a
       >
     </div>
