--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const year = new Date().getFullYear();
     <a href="/" aria-label="Namesake homepage"><Logo /></a>
     <div class="hero">
       <div class="contents">
-        <h1>Be seen for who you are.</h1>
+        <h1>Be seen for who you&nbsp;are.</h1>
         <p class="subhead">
           Namesake streamlines the legal name and gender marker change process
           for trans, non-binary, and gender expansive folks. Launching in
