--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,9 @@ import Logo from "./Logo.astro";
 
 <style>
   header {
+    position: sticky;
+    background-color: var(--pink-7);
+    top: 0;
     display: flex;
     justify-content: flex-start;
     padding: var(--space-m) var(--space-l);
