--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,6 +94,7 @@ import Footer from "../components/Footer.astro";
     background: transparent;
     padding: 0;
     flex: 1;
+    border-radius: 0;
 
     &::placeholder {
       color: var(--gray-a9);
