--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,7 +7,7 @@ body {
   color: var(--gray-12);
   background-color: var(--pink-7);
   display: flex;
-  min-height: 100%;
+  min-height: 100dvh;
   position: relative;
   flex-direction: column;
   align-items: flex-start;
