--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Footer from "../components/Footer.astro";
         starting in Massachusetts.
       </p>
       <p>
-        Rigid systems weren't built for us, but we’ll figure them out together.
+        Rigid systems weren’t built for us, but we’ll figure them out together.
       </p>
     </div>
     <form>
