--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,13 +8,12 @@ import Logo from "./Logo.astro";
 
 <style>
   header {
-    position: sticky;
-    background-color: var(--pink-7);
     top: 0;
     display: flex;
     justify-content: flex-start;
-    padding: var(--space-m) var(--space-l);
+    padding: var(--space-l);
     width: 100%;
-    border-bottom: 1px solid var(--gray-12);
+    max-width: 1200px;
+    margin-inline: auto;
   }
 </style>
