--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,10 +14,10 @@ body {
   font-size: var(--step-0);
   line-height: var(--line-height-body);
   font-synthesis: none;
-  font-family: var(--font-sans);
-  font-weight: 400;
+  font-family: var(--font-mono);
+  font-stretch: 95%;
+  font-weight: 460;
   font-style: normal;
-  letter-spacing: var(--letter-spacing-condensed);
 }
 
 ::selection {
@@ -32,7 +32,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: var(--step-5);
+  font-size: var(--step-7);
   line-height: var(--line-height-single);
   letter-spacing: var(--letter-spacing-condensed);
 }
