User-select: none

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -144,6 +144,7 @@ import Footer from "../components/Footer.astro";
     width: 600px;
     max-width: 100%;
     order: 1;
+    user-select: none;
   }
 
   h1 {
