--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,9 +14,8 @@ body {
   font-size: var(--step-0);
   line-height: var(--line-height-body);
   font-synthesis: none;
-  font-family: var(--font-mono);
-  font-stretch: 95%;
-  font-weight: 460;
+  font-family: var(--font-sans);
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -26,13 +25,12 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: var(--font-serif);
-  font-weight: 500;
+  font-weight: 600;
   font-style: normal;
 }
 
 h1 {
-  font-size: var(--step-7);
+  font-size: var(--step-6);
   line-height: var(--line-height-single);
   letter-spacing: var(--letter-spacing-condensed);
 }
